--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -1,10 +1,551 @@
 @import "./partials/front";
 @import "./partials/variable";
 @import "./partials/mixin";
-
-.main{
-    color:$color-danger;
-    @media screen and (max-width:$sm){
-        color:blue;
+.section-1{
+    background: #1a89c5;
+}
+.nav-item-1{
+    .nav-link{
+        color: white!important;
+        font-size: 16px;
+        font-weight: 600;
+        font-family:"Nunito Sans", sans-serif;
+        padding: 0;
+        width: 80%;
+        position: relative;
+    }
+    text-align: left;
+    padding: 0;
+    z-index: 1;
+}
+ .nav-link::after {
+    content: "";
+    position: absolute;
+    background-color: white;
+    width: 0;
+    height: 2px;
+    left: 0;
+    bottom: 0;
+    z-index: -1;
+    padding: 0;
+    transition: all 0.5s ease;
+}
+.nav-link:hover::after{
+    width: 100%;
+}
+.navbar-nav2{
+    .nav-item2{
+        .nav-link2{
+            text-decoration: none;
+            font-size: 18px;
+            font-weight: 500;
+            color: black;
+            font-family: "Nunito Sans", sans-serif;
+        }
+        padding: 20px;
+        list-style: none;
+        font-family: "Nunito Sans", sans-serif;
+        
+    }
+    padding: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.searchs{
+    .about-us{
+        padding-right: 100px;
+        display: flex;
+        justify-content: left;
+        align-items: center;
+    }
+    .search-input{
+        padding: 10px;
+    }
+    display: flex;
+    justify-content: space-between;
+    padding: 10px;
+}
+.search{
+    position: relative;
+    width: 60%;
+    
+}
+.btn-item{
+    position: absolute;
+    z-index: 9;
+    right: 10px;
+    top: -2px;
+   color: black!important;
+}
+.nav-item{
+    a{
+        font-size: 17;
+        font-family: "Nunito Sans", sans-serif;
+        font-weight: 600;
+        text-align: left;       
     }
 }
+.dropdown{ 
+    .dropdown-menu1{
+        li {
+            a{
+                font-size: 16px;
+                font-weight: 500;
+                font-family: "Nunito Sans", sans-serif;
+            }
+        margin-left: 15px;
+        background-color: #0d6dfde2;
+        color: white;
+        width: 200px;
+
+        }
+        display: none;
+        position: absolute;
+        list-style: none;
+        z-index: 9;
+        padding: 0;
+    }
+    position: relative;
+       
+}
+.dropdown:hover{
+    .dropdown-menu1{
+        display: block;
+
+    }
+.dropdown-item{
+    padding: 10px;
+}    
+.dropdown-item:hover{
+    background-color: rgb(15, 41, 167);
+    opacity: 1;
+}   
+
+}
+.section-2{
+    .nav-item{
+        font-size: 20px;
+    }
+}
+.nav-item3{
+    .nav-link3{
+        text-decoration: none;
+        font-size: 17px;
+        font-family: "Nunito Sans", sans-serif;
+        font-weight: 600;
+        color: black;
+        padding-right: 20px;
+        
+    }
+    padding-right: 100px;
+}
+.section-main-2{
+    margin: 50px 0px;
+}
+.carousel-panel{
+    .img-2{
+        .img-3{
+            width: 100%;
+            height: 100%;
+        }
+        width: 100%;
+        height: 100%;
+    }
+    .carousel-text{
+        .h22{
+            font-size: 60px;
+            color:#ffffff;
+            text-transform: uppercase;
+            font-family: 'Bangers', cursive;
+            width: 70%;
+        }
+        h3{
+            font-size: 30px;
+            color:#ffffff;
+            font-family: "Nunito Sans", sans-serif !important;
+            font-weight: 700
+        }
+        p{
+            font-size: 18px;
+            color:#ffffff;
+            font-family: "Nunito Sans", sans-serif !important;
+            font-weight: 300;
+            padding-bottom: 30px;
+            width: 50%;
+            
+        }
+        position: absolute;
+        height: 100%;
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        left: 0;
+        padding-left: 80px; 
+       }
+    position: relative;
+}
+@media only screen and (max-width:576px){
+    .carousel-text{
+        scale: 0.2;
+        justify-content: center!important;
+        
+    }
+}
+ @media only screen and (max-width:786px){
+    .carousel-text{
+        scale: 0.7;
+        justify-content: center!important;
+        
+    }
+   
+}
+ @media only screen and (max-width:992px){
+    .carousel-panel{
+        .h22{
+            font-size: 44px !important;
+        }
+        justify-content: center!important;
+        
+    }
+   
+}
+ @media only screen and (max-width:1100px){
+    .carousel-panel{
+        justify-content: center!important;
+        
+    }
+    
+}
+.btn-items-1{
+    font-size: 14px;
+    background: #000000;
+    color: #ffffff;
+    padding: 15px 35px;
+    margin: 10px 15px 0 0;
+    border-radius: 25px;
+    text-transform: uppercase;
+    font-weight: 500;
+    text-decoration: none;
+   }
+.btn-items-1:hover{
+    background-color: green !important;
+    color: white;
+}
+.products{
+    .product{
+        .images {
+            img{
+                width: 100% ;
+                height: 100%;
+                border-radius: 10px;
+            }
+            .images-hover{
+                .li-hover{
+                    .abc{
+                    text-decoration: none;
+                    font-size: 20px;
+                    border: 1px solid white;   
+                    display: block;
+                    color: white;
+                    padding: 10px;
+                    background-color: #000000;
+                    opacity: 0;
+                    border-radius: 10px;
+                    }
+                    padding: 10px;
+                    text-align: center;
+                    list-style: none;
+                    width: 100%;
+                    border-radius: 10px;
+                }
+            position: absolute;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            height: 100%;
+            width: 100%;
+            top: 0;
+            padding: 0;
+            border-radius: 10px;
+            box-shadow: 0px 0px 7px rgb(68, 66, 66);
+
+            }
+        width: 100%;
+        height: 100%;
+        position: relative;
+        border-radius: 10px;
+        }
+        width: 100%;
+        height: 100%;
+        padding: 15px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        border-radius: 10px;      
+    } 
+    display: grid;
+    display: flex;
+    justify-content: center;
+       
+}
+
+.images:hover{
+    .images-hover{
+       opacity: 0.75;
+       background-color: #000000;
+   };
+   .abc{
+    opacity: 1 !important;
+   }
+}
+.abc:hover{
+    background-color:#1a89c5 !important;
+}
+
+
+.cards{
+    .card-item{
+        h2{
+            padding: 15px;
+            font-weight: bold;
+            text-align: center;
+            font-family: "Nunito Sans", sans-serif;
+            font-size: 24px;
+            width: 100%;
+            
+        }
+        .balance{
+            padding: 15px 0px 45px 0px;
+        }
+        .img-item{
+            .images-item{
+                width: 100%;
+                height: 100%;
+                border-radius: 10px;
+                box-shadow: 0px 0px 7px rgb(68, 66, 66);
+            }
+            width: 100%;
+            height: 100%;
+            transition: all 1s ease-out;
+
+        }
+        width: 100%;
+        padding: 0;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+    }
+    
+    display: flex;
+    justify-content: center;
+    align-items: center; 
+    padding: 0;  
+}.img-item:hover{
+    transform: translateY(-5px);
+    scale: 1.009;
+}
+ .btn-items{
+    text-decoration: none;
+    border: 1px solid black;
+    padding: 10px 30px;
+    background-color: #1a89c5;
+    font-size: 14px;
+    font-weight: 700;
+    color: white;
+    font-family:"Nunito Sans", sans-serif ;
+    border-radius: 5px;
+}
+.btn-items:hover{
+    background-color: #000000;
+    color: white;
+}
+.fw-bolds{
+    padding-top: 20px;
+    font-family: "Nunito Sans", sans-serif;
+    font-size: 22px;
+    font-weight: 500;
+
+}
+.section-4{
+    background-image: url("../images/testimonials-cat-bg.webp");
+    position: relative;
+    background-size: cover;
+    background-repeat: no-repeat;
+    position: relative;
+    padding: 20px 20px 0px 0px;
+    margin: 70px 0px;    
+}
+.img-cats{
+    position: relative;
+}
+.img-4{
+    position: absolute;
+    bottom: 0;
+    left: 0;
+}
+@media only screen and (max-width:1200px) {
+
+    .img-cat{
+        display: none;
+    }
+    .comments{
+        justify-content: center;
+    }
+}
+.comment-item{
+    h3{
+        display: inline;
+        font-size: 34px;
+        font-weight:  700;
+        line-height: 51px;
+    }
+    span{
+        padding-bottom: 20px;
+    }
+    p{
+        font-size: 18px;
+        line-height: 27px;
+    }
+    h2{
+        font-size: 48px;
+        font-weight: bolder;
+        display: inline;
+        line-height: 72px;
+    }
+    display: flex;
+    flex-direction: column;
+    padding-top: 20px;
+    color: white;
+    font-family: "Nunito Sans", sans-serif;
+}
+.heading{
+    padding-bottom: 50px;
+    font-size: 40px;
+}
+.card-section-5{
+    .card-img{
+        .img-5{
+            img{
+                border-radius: 10px;
+                box-shadow: 0px 0px 7px rgb(112, 92, 92);
+            }
+            .ul-cards{
+                .li-cards{
+                    scale: 2;
+                    opacity: 0;
+                }
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                position: absolute;
+                top: 0;
+                width: 100%;
+                height: 100%;
+                padding: 0;
+                transition: all 1s ease;
+            }
+            position: relative;
+            padding: 0;
+            width: 100%;
+            height: 100%;
+        }
+        padding: 10px;
+       
+        
+    }
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+}
+.ul-cards:hover{
+    .li-cards{
+        opacity: 1 !important;
+        color: white;
+    }
+    background-color: #000000;
+    opacity: 0.6;
+}
+.footer{
+    .footer-center-text{
+        h2{
+            font-size: 28px;
+            font-weight: 700;
+            line-height: 30.8px;
+            margin: 0px 0px 8px;
+            padding: 20px 0;
+        }
+        div{
+            font-size: 18px;
+            line-height: 27px;
+        }
+        span{
+            font-size: 18px;
+            line-height: 27px;
+            margin: 0px 0px 16px;
+            padding: 20px 0px 10px;
+        }
+        p{
+            font-size: 18px;
+            line-height: 27px;
+            margin: 0px 0px 16px;
+            padding: 0px 0px 10px;
+        }
+        a{
+            color: green;
+        }
+        .footer-img{
+            width: 40%;
+            height: 100%;
+        }
+        display: flex;
+        flex-direction: column;
+    }
+    padding-top: 50px;   
+    background-image: url("../images/footer-bg.webp");
+    width: 100%;
+    height: 100%;    
+}
+.footer__bottom{
+    .text-bottom{
+        font-size: 18px;
+        line-height: 27px;
+        display: flex;
+        align-items: end;
+    }
+    .icon-bottom{
+        right: 0;
+    }
+    border-top: 1px solid black;
+    padding: 30px;
+}
+#myBtn {
+    // display: none;
+    position: fixed;
+    bottom: 20px;
+    right: 30px;
+    z-index: 99;
+    font-size: 18px;
+    outline: none;
+    background-color:white;
+    color: blue;
+    cursor: pointer;
+    border: 1px solid white;
+    border-radius: 40px;
+  }
+  
+  #myBtn:hover {
+    background-color: green;
+  }
+
+
+  
+
+
+
