--- a/assets/scss/main.css
+++ b/assets/scss/main.css
@@ -35,18 +35,23 @@
   width: 100%;
 }
 
-.navbar-nav2 {
+@media only screen and (max-width: 992px) {
+  .navbar-nav {
+    display: none;
+  }
+}
+.header-select2 {
   padding: 0;
   display: flex;
   justify-content: center;
   align-items: center;
 }
-.navbar-nav2 .nav-item2 {
+.header-select2 .nav-item2 {
   padding: 20px;
   list-style: none;
   font-family: "Nunito Sans", sans-serif;
 }
-.navbar-nav2 .nav-item2 .nav-link2 {
+.header-select2 .nav-item2 .nav-link2 {
   text-decoration: none;
   font-size: 18px;
   font-weight: 500;
@@ -128,12 +133,15 @@
 
 .nav-item3 {
   padding-right: 100px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .nav-item3 .nav-link3 {
   text-decoration: none;
-  font-size: 17px;
+  font-size: 18px;
   font-family: "Nunito Sans", sans-serif;
-  font-weight: 600;
+  font-weight: 500;
   color: black;
   padding-right: 20px;
 }
@@ -368,9 +376,11 @@
   position: relative;
   background-size: cover;
   background-repeat: no-repeat;
-  position: relative;
   padding: 20px 20px 0px 0px;
+  padding-top: 50px;
   margin: 70px 0px;
+  width: 100%;
+  height: 100%;
 }
 
 .img-cats {
@@ -381,6 +391,10 @@
   position: absolute;
   bottom: 0;
   left: 0;
+}
+.img-4 .img-cat {
+  width: 100%;
+  height: 100%;
 }
 
 @media only screen and (max-width: 1200px) {
