--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -33,7 +33,12 @@
 .nav-link:hover::after{
     width: 100%;
 }
-.navbar-nav2{
+@media only screen and (max-width:992px){
+    .navbar-nav{
+        display: none;
+    }
+}
+.header-select2{
     .nav-item2{
         .nav-link2{
             text-decoration: none;
@@ -131,14 +136,17 @@
 .nav-item3{
     .nav-link3{
         text-decoration: none;
-        font-size: 17px;
+        font-size: 18px;
         font-family: "Nunito Sans", sans-serif;
-        font-weight: 600;
+        font-weight: 500;
         color: black;
         padding-right: 20px;
-        
+                
     }
     padding-right: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 .section-main-2{
     margin: 50px 0px;
@@ -376,18 +384,27 @@
     position: relative;
     background-size: cover;
     background-repeat: no-repeat;
-    position: relative;
     padding: 20px 20px 0px 0px;
-    margin: 70px 0px;    
+    padding-top: 50px;
+    margin: 70px 0px;
+    width: 100%; 
+    height: 100%;   
 }
 .img-cats{
     position: relative;
 }
 .img-4{
+    .img-cat{
+        width: 100%;
+        height: 100%;
+    }
     position: absolute;
     bottom: 0;
     left: 0;
+    
+    
 }
+
 @media only screen and (max-width:1200px) {
 
     .img-cat{
