--- a/assets/scss/main.css
+++ b/assets/scss/main.css
@@ -383,6 +383,10 @@
   height: 100%;
 }
 
+.comments {
+  padding-bottom: 40px;
+}
+
 .img-cats {
   position: relative;
 }
@@ -406,6 +410,9 @@
   }
 }
 .comment-item {
+  width: 100%;
+  height: 500px;
+  padding-bottom: 20px;
   display: flex;
   flex-direction: column;
   padding-top: 20px;
