--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -390,6 +390,9 @@
     width: 100%; 
     height: 100%;   
 }
+.comments{
+    padding-bottom: 40px
+}
 .img-cats{
     position: relative;
 }
@@ -434,6 +437,9 @@
         display: inline;
         line-height: 72px;
     }
+    width: 100%;
+    height: 500px;
+    padding-bottom: 20px;
     display: flex;
     flex-direction: column;
     padding-top: 20px;
