--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -166,7 +166,7 @@
             color:#ffffff;
             text-transform: uppercase;
             font-family: 'Bangers', cursive;
-            width: 70%;
+            width: 40% !important;
         }
         h3{
             font-size: 30px;
@@ -224,7 +224,7 @@
         justify-content: center!important;
         
     }
-    
+        
 }
 .btn-items-1{
     font-size: 14px;
