--- a/assets/scss/main.css
+++ b/assets/scss/main.css
@@ -168,15 +168,14 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  left: 0;
-  padding-left: 80px;
+  padding-left: 5%;
 }
 .carousel-panel .carousel-text .h22 {
   font-size: 60px;
   color: #ffffff;
   text-transform: uppercase;
   font-family: "Bangers", cursive;
-  width: 40% !important;
+  width: 40%;
 }
 .carousel-panel .carousel-text h3 {
   font-size: 30px;
@@ -193,29 +192,76 @@
   width: 50%;
 }
 
-@media only screen and (max-width: 576px) {
+@media only screen and (max-width: 1130px) {
+  .h22 {
+    font-size: 44px !important;
+    width: 70% !important;
+  }
+  .h33 {
+    font-size: 20px !important;
+    width: 70%;
+  }
+  .p33 {
+    font-size: 14px !important;
+    padding-bottom: 5px !important;
+    width: 70% !important;
+  }
+  .btn-items-1 {
+    padding: 10px 20px !important;
+    margin: 10px 10px 0 0 !important;
+    font-size: 11px !important;
+  }
   .carousel-text {
-    scale: 0.2;
-    justify-content: center !important;
+    align-items: center !important;
   }
 }
 @media only screen and (max-width: 786px) {
+  .h22 {
+    font-size: 30px !important;
+    width: 85% !important;
+  }
+  .h33 {
+    font-size: 15px !important;
+    width: 85%;
+  }
+  .p33 {
+    font-size: 14px !important;
+    padding-bottom: 5px !important;
+    width: 85% !important;
+  }
+  .btn-items-1 {
+    padding: 5px 20px !important;
+    margin: 7px 10px 0 0 !important;
+    font-size: 11px !important;
+    width: 85%;
+  }
   .carousel-text {
-    scale: 0.7;
-    justify-content: center !important;
+    align-items: center !important;
   }
 }
-@media only screen and (max-width: 992px) {
-  .carousel-panel {
-    justify-content: center !important;
+@media only screen and (max-width: 576px) {
+  .h22 {
+    font-size: 18px !important;
+    width: 95% !important;
   }
-  .carousel-panel .h22 {
-    font-size: 44px !important;
+  .h33 {
+    font-size: 12px !important;
+    width: 95%;
   }
-}
-@media only screen and (max-width: 1100px) {
-  .carousel-panel {
-    justify-content: center !important;
+  .p33 {
+    font-size: 10px !important;
+    padding-bottom: 5px !important;
+    width: 95% !important;
+    margin: 0;
+  }
+  .btn-items-1 {
+    padding: 5px 10px !important;
+    margin: 7px 10px 0 0 !important;
+    font-size: 7px !important;
+    width: 85%;
+  }
+  .carousel-text {
+    align-items: center !important;
   }
 }
 .btn-items-1 {
